--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.11'
+    implementation 'com.github.yijigu7745:RxNetWork:0.3-alpha'
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
 }
