--- a/rxnetwork/build.gradle
+++ b/rxnetwork/build.gradle
@@ -31,4 +31,21 @@ android {
 }
 
 dependencies {
+    //Rxbus
+    implementation 'lib.gorden.rxbus2:rxbus:2.0.1'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    //Gson 库
+    implementation 'com.google.code.gson:gson:2.6.2'
+    // 下面两个是RxJava 和RxAndroid
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //转换器，请求结果转换成Model
+    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.yijigu7745:RxNetWork:0.3-alpha'
 }
