--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    api project(':rxnetwork')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -46,6 +47,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.2.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.11'
-    implementation 'com.github.yijigu7745:RxNetWork:0.3-alpha'
+    implementation 'com.github.yijigu7745:RxNetWork:0.36-alpha'
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
 }
